--- a/CppCodeGeneratorSubsystem.Tests/CppCodeGeneratorSubsystem.Tests.csproj
+++ b/CppCodeGeneratorSubsystem.Tests/CppCodeGeneratorSubsystem.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CppCodeGeneratorSubsystem\CppCodeGeneratorSubsystem.csproj" />
+  </ItemGroup>
+
 </Project>
